# speff

./: .hlint.yaml  .stylish-haskell.yaml  README.md  cabal.project  hie.yaml  package.yaml  speff.cabal  stack.yaml
bench/: BenchCatch.hs  BenchCountdown.hs  BenchLocal.hs  BenchPyth.hs  Main.hs
src/Ef/: Util.hs
src/Ef/Internal/: Env.hs  Monad.hs  Util.hs
src/Sp/: Eff.hs  Error.hs  NonDet.hs  Reader.hs  State.hs  Util.hs  Writer.hs
src/Sp/Eff/: Exception.hs
src/Sp/Internal/: Ctl.hs  Env.hs  Handle.hs  Monad.hs  Util.hs  Vec.hs
src/Sp/Internal/Ctl/: Monad.hs  Monadic.hs  Native.hs
