cabal-version: 3.0

name:         speff
version:      0.1.0.0
author:       Xy Ren
maintainer:   xy.r@outlook.com
license:      BSD-3-Clause
copyright:    2022 Xy Ren
homepage:     https://github.com/re-xyr/speff
bug-reports:  https://github.com/re-xyr/speff/issues
tested-with:  GHC == {9.4.4, 9.2.5, 9.0.2, 8.10.7, 8.8.4, 8.6.5}
category:     Control, Effect, Language
synopsis:     Efficient higher-order effect handlers

license-file:        LICENSE
extra-source-files:  README.md

source-repository head
  type:      git
  location:  https://github.com/re-xyr/speff

common lang
  default-language: Haskell2010
  build-depends:
    base             >= 4.12 && < 4.19,
    atomic-primops  ^>= 0.8,
    exceptions      ^>= 0.10,
    primitive       ^>= 0.7,
  ghc-options:
    -Wall
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wno-unticked-promoted-constructors
    -Wpartial-fields
    -Wunused-type-patterns
  default-extensions:
    BlockArguments
    DerivingStrategies
    GADTs
    LambdaCase
    ScopedTypeVariables
    TypeApplications
    TypeOperators
    UnicodeSyntax
    KindSignatures
    DataKinds
    PolyKinds
    RoleAnnotations
    TypeFamilies
    MultiParamTypeClasses
    FlexibleContexts
    FlexibleInstances
    UndecidableInstances
    RankNTypes
    ConstraintKinds
    EmptyCase
    TupleSections
    BangPatterns
    PatternSynonyms
    ViewPatterns
    FunctionalDependencies
    MagicHash

common dump
  ghc-options:
    -ddump-simpl
    -ddump-to-file
    -dsuppress-all
    -dsuppress-uniques

library
  import:          lang, dump
  hs-source-dirs:  src
  ghc-options:
    -fdicts-strict
    -flate-dmd-anal
    -fspec-constr
    -fliberate-case
    -fstatic-argument-transformation
  exposed-modules:
    Sp.Internal.Ctl
    Sp.Internal.Env
    Sp.Internal.Monad
    Sp.Internal.Util
    Sp.Eff
    Sp.Util

benchmark speff-bench
  import:          lang, dump
  type:            exitcode-stdio-1.0
  hs-source-dirs:  bench
  main-is:         Main.hs
  ghc-options:
    -rtsopts
    -with-rtsopts=-T
  build-depends:
    speff,
    eveff          == 1.0.0.2,
    freer-simple   == 1.2.1.2,
    fused-effects  == 1.1.2.1,
    mtl            == 2.2.2,
    polysemy       == 1.9.0.0,
    tasty-bench   ^>= 0.3,
  other-modules:
    BenchCatch
    BenchCountdown
    BenchLocal
    BenchPyth
